--- a/redocly.yaml
+++ b/redocly.yaml
@@ -3,19 +3,22 @@ openapi:
   theme:
     colors:
       primary:
-        main: "#F61F1B"      
+        main: "#F61F1B"
       secondary:
-        main: "#FFFFFF"      
-        light: "#C3C2C1"     
+        main: "#FFFFFF"
+        light: "#C3C2C1"
       text:
-        primary: "#37474F"    
-        secondary: "#868483" 
-        light: "#B0BEC5"    
+        primary: "#37474F"
+        secondary: "#868483"
+        light: "#B0BEC5"
       accent:
-        main: "#891815"    
+        main: "#891815"
       success:
-        main: "#66BB6A"    
+        main: "#66BB6A"
       warning:
-        main: "#FFEE58"    
+        main: "#FFEE58"
       error:
         main: "#fa4641"
+    logo:
+      maxHeight: "210px"
+      maxWidth: "260px"
