feat: improve openapi structure for better organization

--- a/components/requestBodies/merchant-update-request.yaml
+++ b/components/requestBodies/merchant-update-request.yaml
@@ -21,8 +21,9 @@ content:
           description: 'O tipo de entidade do objeto atualizado.'
         onlyAddProducts:
           type: boolean
-          description: 'Caso sim, os items enviados serão adicionados, e os restantes serão removidos.'
+          description: 'Se for true, os itens serão adicionados ou atualizados sem remover os já existentes. Se for false, os itens serão adicionados, mas todos os outros produtos existentes serão excluídos.'
       required:
       - entityType
       - merchantStatus
+      - onlyAddProducts
       - updatedObjects
